// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HighlightHalo /> HighlightHalo with multiple props matches with snapshot 1`] = `
.c0 {
  position: relative;
  height: 18.75rem;
  width: 18.75rem;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c0 > div {
  position: absolute;
  left: 0;
  top: 0;
  opacity: 0;
  border-radius: 50%;
  background-color: #444;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-animation-name: iwhber,iTFZKx,fDpJFR;
  animation-name: iwhber,iTFZKx,fDpJFR;
  -webkit-animation-duration: 0.5s,4s,0.1s;
  animation-duration: 0.5s,4s,0.1s;
  -webkit-animation-timing-function: ease-in-out,ease-in-out,ease-in-out;
  animation-timing-function: ease-in-out,ease-in-out,ease-in-out;
  -webkit-animation-iteration-count: 1,5,1;
  animation-iteration-count: 1,5,1;
}

.c0 > div:nth-of-type(1) {
  top: 33.33%;
  left: 33.33%;
  width: 33.33%;
  height: 33.33%;
  -webkit-animation-delay: 1s,1.5s,21.5s;
  animation-delay: 1s,1.5s,21.5s;
}

.c0 > div:nth-of-type(2) {
  top: 16.66%;
  left: 16.66%;
  width: 66.66%;
  height: 66.66%;
  -webkit-animation-delay: 1.1s,1.6s,21.6s;
  animation-delay: 1.1s,1.6s,21.6s;
}

.c0 > div:nth-of-type(3) {
  width: 100%;
  height: 100%;
  -webkit-animation-delay: 1.2s,1.7s,21.7s;
  animation-delay: 1.2s,1.7s,21.7s;
}

<div
  className="c0"
  onAnimationEnd={[Function]}
>
  <div />
  <div />
  <div />
</div>
`;

exports[`<HighlightHalo /> simple HighlightHalo  matches with snapshot 1`] = `
.c0 {
  position: relative;
  height: 7.5rem;
  width: 7.5rem;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c0 > div {
  position: absolute;
  left: 0;
  top: 0;
  opacity: 0;
  border-radius: 50%;
  background-color: #19b4fa;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-animation-name: iwhber,iTFZKx,fDpJFR;
  animation-name: iwhber,iTFZKx,fDpJFR;
  -webkit-animation-duration: 0.5s,4s,0.1s;
  animation-duration: 0.5s,4s,0.1s;
  -webkit-animation-timing-function: ease-in-out,ease-in-out,ease-in-out;
  animation-timing-function: ease-in-out,ease-in-out,ease-in-out;
  -webkit-animation-iteration-count: 1,3,1;
  animation-iteration-count: 1,3,1;
}

.c0 > div:nth-of-type(1) {
  top: 33.33%;
  left: 33.33%;
  width: 33.33%;
  height: 33.33%;
  -webkit-animation-delay: 0s,0.5s,12.5s;
  animation-delay: 0s,0.5s,12.5s;
}

.c0 > div:nth-of-type(2) {
  top: 16.66%;
  left: 16.66%;
  width: 66.66%;
  height: 66.66%;
  -webkit-animation-delay: 0.1s,0.6s,12.6s;
  animation-delay: 0.1s,0.6s,12.6s;
}

.c0 > div:nth-of-type(3) {
  width: 100%;
  height: 100%;
  -webkit-animation-delay: 0.2s,0.7s,12.7s;
  animation-delay: 0.2s,0.7s,12.7s;
}

<div
  className="c0"
  onAnimationEnd={[Function]}
>
  <div />
  <div />
  <div />
</div>
`;
